--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "firebase": "^9.6.1",
     "firebase-admin": "^10.0.1",
+    "moment": "^2.29.1",
     "nodemailer": "^6.7.2",
     "nodemailer-juice": "^1.0.1"
   },
